--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: "Create Environment file and generate app key"
           command: |
-            mv .env.testing .env
+            cp .env.testing .env
             php artisan key:generate
 
       - run:
