--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,4 +57,6 @@ jobs:
 
       - run:
           name: "Run Tests"
-          command: ./vendor/bin/phpunit
+          command: |
+            php artisan config:cache
+            ./vendor/bin/phpunit
