--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,5 +58,6 @@ jobs:
       - run:
           name: "Run Tests"
           command: |
+            php artisan config:clear
             php artisan config:cache
             ./vendor/bin/phpunit
